Minor: Search RBAC, fix condition evaluation for single policy multiple rules